# csdcc-catalog

./: .gitignore  GEMINI.md  README.md  catalog.json  catalog_cli.py  dataset_creator.py  dictionary.json  pyproject.toml
activate-1/: mapper.json
activate1/: dcat.json  mapper.json
activate_1/: dcat.json  mapper.json
benefit-1/: dcat.json  mapper.json
benefit-2/: dcat.json  mapper.json
benefit-3/: dcat.json  mapper.json
benefit1/: dcat.json  mapper.json
benefit2/: dcat.json  mapper.json
benefit3/: dcat.json  mapper.json
benefit_1/: dcat.json  mapper.json
benefit_2/: dcat.json  mapper.json
benefit_3/: dcat.json  mapper.json
cat-g-1/: dcat.json  mapper.json
cat-g-2/: dcat.json  mapper.json
cat-g-3/: dcat.json  mapper.json
cat-g_1/: dcat.json  mapper.json
cat-g_2/: dcat.json  mapper.json
cat-g_3/: dcat.json  mapper.json
catg1/: dcat.json  mapper.json
catg2/: dcat.json  mapper.json
catg3/: dcat.json  mapper.json
ccm-1/: mapper.json
ccm-2/: mapper.json
ccm-3/: mapper.json
ccm-4/: dcat.json  mapper.json
ccm-5/: dcat.json  mapper.json
ccm-6/: dcat.json  mapper.json
ccm-7/: mapper.json
ccm1/: dcat.json  mapper.json
ccm2/: dcat.json  mapper.json
ccm3/: dcat.json  mapper.json
ccm4/: dcat.json  mapper.json
ccm5/: dcat.json  mapper.json
ccm6/: dcat.json  mapper.json
ccm7/: dcat.json  mapper.json
ccm_1/: dcat.json  mapper.json
ccm_2/: dcat.json  mapper.json
ccm_3/: dcat.json  mapper.json
ccm_4/: dcat.json  mapper.json
ccm_5/: dcat.json  mapper.json
ccm_6/: dcat.json  mapper.json
ccm_7/: dcat.json  (+1 more)
(+69 files in other folders)
